# e4s-cl

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG  LICENSE  Makefile  README.md  RELEASE.md  package.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
completions/: e4s-cl.bash
doc-source/: Makefile  requirements.txt
docs/: .gitignore  Makefile  authors.html  authors.rst  conf.py  configuration_file.rst  developer.rst  examples.html  examples.rst  genindex.html  how.rst  index.html  index.rst  installation.html  installation.rst  objects.inv  py-modindex.html  quickstart.html  quickstart.rst  requirements.txt  search.html  searchindex.js
e4s_cl/: __init__.py  __main__.py  config.py  error.py  logger.py  sample.py  util.py  variables.py  version.py
requirements/: core.txt  coverage.txt  docs.txt  lint.txt  tests.txt
scripts/: completion-json.py  demo.sh  download_assets.py  e4s  e4s-cl  e4s-cl-completion.bash  e4s-cl-demo.sh  filesof.py  format.sh  generate_completion_bash.py  get_mpi_lib_version.py  get_soname_path.py  mpi_id.py  mpi_test.py  naive  readsym.py  success.py  version.sh
scripts/completion/: Cargo.toml  README.md
scripts/completion/src/: lib.rs
scripts/completion/src/structures/: completable.rs  deserializers.rs  mod.rs
tests/: __init__.py  test_arguments.py  test_assets.py  test_completion.py  test_config.py  test_containers.py  test_containers_apptainer.py  test_containers_barebones.py  test_containers_docker.py  test_containers_podman.py  test_containers_shifter.py  test_containers_sif_like.py  test_containers_singularity.py  test_detect_mpi.py  test_detect_name.py  test_execute.py  test_filter_mpi.py  test_help.py  test_init.py  test_init_wi4mpi.py  test_launch.py  test_launchers.py  test_model_profile.py  test_profile_copy.py  test_profile_create.py  test_profile_delete.py  test_profile_detect.py  test_profile_diff.py  test_profile_edit.py  test_profile_execute.py  (+9 more)
(+196 files in other folders)
