[package]
name = "e4s-cl-completion"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ['derive'] }
serde_json = "1.0.59"
dirs = "4.0.0"
log = "0.4.14"
simplelog = "0.12.0"
shlex = "1.3.0"
itertools = "0.10.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
